fixed view gallery hover effect on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -176,10 +176,12 @@ body {
   transition: border-color .3s, background .3s, letter-spacing .3s;
 }
 
-.slideshow__cta:hover {
-  border-color: rgba(255, 255, 255, .7);
-  background: rgba(255, 255, 255, .08);
-  letter-spacing: 0.2em;
+@media (hover: hover) {
+  .slideshow__cta:hover {
+    border-color: rgba(255, 255, 255, .7);
+    background: rgba(255, 255, 255, .08);
+    letter-spacing: 0.2em;
+  }
 }
 
 @media (max-width: 599px) {
